# test_pets

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
data/: constants.py  pet_objects.py
helpers/: validators.py
request_logic/: logic.py  request_pets.py
tests/: test_create_pet.py  test_delete_pet.py  test_get_pet.py  test_update_pet.py
